project(middleware)

link_directories(
    ${CMAKE_SOURCE_DIR}/output/${TARGET_PLATFORM}/lib
)

add_subdirectory(cm)
add_subdirectory(log)
add_subdirectory(diag)
add_subdirectory(phm)
add_subdirectory(sm)
add_subdirectory(em)
add_subdirectory(adf)
add_subdirectory(adf-lite)
add_subdirectory(crypto)
add_subdirectory(https)
add_subdirectory(tools/data_tools)
add_subdirectory(crc)
add_subdirectory(per)
add_subdirectory(codec)
add_subdirectory(cfg)
add_subdirectory(tools/dbg)
add_subdirectory(cmake)
add_subdirectory(sensor)
add_subdirectory(e2e)
add_subdirectory(tools/cfg_tool)
add_subdirectory(zmq_ipc)
add_subdirectory(someip)
add_subdirectory(tools/log_tool)
add_subdirectory(devm)
add_subdirectory(tools/devm_tool)
add_subdirectory(tools/stmm_tool)
add_subdirectory(tools/fm_tool)
add_subdirectory(tools/tsync_tool)

if(${TARGET_PLATFORM} STREQUAL "orin")
    # add_subdirectory(tools/crypto_tool)
    add_subdirectory(logblock_helper)
    add_subdirectory(desen)
endif()
add_subdirectory(ota_comp_api)
add_subdirectory(fsm)
add_subdirectory(lrzip-0.631)
