project(service)

add_subdirectory(update_manager)
add_subdirectory(phm_server)
add_subdirectory(can_tsync_center)
add_subdirectory(data_collection)
add_subdirectory(remote_diag)
add_subdirectory(dl_adf)
# add_subdirectory(canstack)
add_subdirectory(state_machine)
add_subdirectory(simple_udp_tsync)
# add_subdirectory(hz_common) 
add_subdirectory(camera_venc)
add_subdirectory(log_server)
add_subdirectory(config_server)
add_subdirectory(system_monitor)
add_subdirectory(devm_server)
add_subdirectory(network_capture)
add_subdirectory(pki_service)
add_subdirectory(map_manage)
add_subdirectory(hz_time)
add_subdirectory(extwdg)

if (${TARGET_PLATFORM} MATCHES "orin")
    add_subdirectory(sys_statemgr)
    add_subdirectory(log_collector)
else ()
    file(GLOB CONF_FILES  "${CMAKE_SOURCE_DIR}/service/log_collector/conf/log_daemon_storage.json")
    file(COPY ${CONF_FILES} DESTINATION ${CMAKE_SOURCE_DIR}/output/${TARGET_PLATFORM}/conf)
endif()

if(${TARGET_PLATFORM} MATCHES "orin")
    add_subdirectory(ethstack)
    add_subdirectory(hz_dvr)
endif()
